# rhai-demo

./: Cargo.toml  README.md  capsule.toml
contracts/rhai-demo/: Cargo.toml
contracts/rhai-demo/src/: entry.rs  error.rs
tests/src/: tests.rs
