[package]
name = "rhai-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.10.0"
rhai = {version = "1.9.1", features = [ "no_std", "no_float", "only_i64" ], default_features = false }
